--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -18,6 +18,18 @@
             "description": "Пройдите тщательно составленный обучающиий курс, который улучшит ваши навыки"
         }
     },
+    "profile": {
+        "average": "Ср.",
+        "hours": "ч",
+        "seconds": "с",
+        "hours_week": "Часов за неделю",
+        "mode": "Режим",
+        "date": "Дата",
+        "best_wpm": "Лучший СВМ",
+        "best_accuracy": "Лучшая точность",
+        "total_tests": "Всего тестов",
+        "total_words": "Всего слов"
+    },
     "typing": {
         "title": "Обучение",
         "levelName": "Клавиши f и j",
