Сверстал страничку входа

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -19,6 +19,7 @@
         }
     },
     "profile": {
+        "title":"Profile",
         "average": "Avg.",
         "hours": "h",
         "seconds": "s",
