--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -19,6 +19,7 @@
         }
     },
     "profile": {
+        "title":"Профиль",
         "average": "Ср.",
         "hours": "ч",
         "seconds": "с",
