Доделал валидацию в регистрации, добавил ненужные папки в gitignore

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -23,6 +23,7 @@
         "password": "Password",
         "email": "Email",
         "confirm_pass": "Confirm password",
+        "have_acc": "Already have an account?",
         "no_acc": "Don't have an account?",
         "login": "Login",
         "registration": "Registration",
