--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -36,6 +36,7 @@
         "password": "Пароль",
         "email": "Почта",
         "confirm_pass": "Подтвердите пароль",
+        "have_acc": "Уже есть аккаунт?",
         "no_acc": "Нет аккаунта?",
         "login": "Вход",
         "registration": "Регистрация",
