начал делать бесконечный режим (не пофиксил баг с запросом слов)

--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -16,6 +16,10 @@
         "card1": {
             "title": "Education",
             "description": "Complete a carefully designed training course that will improve your skills"
+        },
+        "card2": {
+            "title": "Infinity",
+            "description": "Mode for advanced people to hone their typing skills"
         }
     },
     "auth": {
