--- a/frontend/public/locales/ru/translation.json
+++ b/frontend/public/locales/ru/translation.json
@@ -16,6 +16,10 @@
         "card1": {
             "title": "Обучение",
             "description": "Пройдите тщательно составленный обучающиий курс, который улучшит ваши навыки"
+        },
+        "card2": {
+            "title": "Бесконечный режим",
+            "description": "Режим для опытных людей, позволяющий оттачивать свои навыки печати"
         }
     },
     "profile": {
