сделал режим на время

--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -20,6 +20,10 @@
         "card2": {
             "title": "Infinity",
             "description": "Mode for advanced people to hone their typing skills"
+        },
+        "card3": {
+            "title" : "Time Attack",
+            "description": "Try yourself in speed typing, track your progress"
         }
     },
     "auth": {
