--- a/frontend/public/locales/ru/translation.json
+++ b/frontend/public/locales/ru/translation.json
@@ -20,6 +20,10 @@
         "card2": {
             "title": "Бесконечный режим",
             "description": "Режим для опытных людей, позволяющий оттачивать свои навыки печати"
+        },
+        "card3": {
+            "title" : "Печать на время",
+            "description": "Попробуйте себя в печати на скорость, отслеживайте свой прогресс"
         }
     },
     "profile": {
