--- a/frontend/public/locales/ru/translation.json
+++ b/frontend/public/locales/ru/translation.json
@@ -4,7 +4,9 @@
         "interface": "Интерфейс",
         "language": "Язык",
         "theme": "Тема",
-        "font": "Моноширный шрифт"
+        "font": "Моноширный шрифт",
+        "timeAttack": "Печать на время",
+        "timeAttackTime":"Время на уровень"
     },
     "navbar": {
         "home": "Главная",
