--- a/frontend/public/locales/ru/translation.json
+++ b/frontend/public/locales/ru/translation.json
@@ -12,7 +12,8 @@
         "home": "Главная",
         "typing": "Печать",
         "settings": "Настройки",
-        "profile": "Профиль"
+        "profile": "Профиль",
+        "docs": "Справка"
     },
     "main": {
         "card1": {
