Добавил недостающую карточку

--- a/frontend/public/locales/ru/translation.json
+++ b/frontend/public/locales/ru/translation.json
@@ -27,6 +27,10 @@
         "card3": {
             "title" : "Печать на время",
             "description": "Попробуйте себя в печати на скорость, отслеживайте свой прогресс"
+        },
+        "card4": {
+            "title" : "Печать на кол-во слов",
+            "description": "Отточите свою взрыную скорость в данном режиме!"
         }
     },
     "profile": {
