--- a/frontend/public/locales/ru/translation.json
+++ b/frontend/public/locales/ru/translation.json
@@ -30,7 +30,7 @@
         },
         "card4": {
             "title" : "Печать на кол-во слов",
-            "description": "Отточите свою взрыную скорость в данном режиме!"
+            "description": "Отточите свою взрыную скорость печати в данном режиме!"
         }
     },
     "profile": {
