Поправил перводы на странице печати, убрал ненужное, пофиксил баг когда буква не появлялась с первого раза

--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -54,10 +54,13 @@
         "total_words": "Words total"
     },
     "typing": {
+        "all_keys": "All keys",
+        "main_key": "Main key",
         "title": "Learning",
-        "levelName": "f and j characters",
         "time": "Time",
         "wpm": "WPM",
+        "error_rate": "Error rate",
+        "confidence": "Confidence",
         "accuracy": "Accuracy",
         "restartButton": "Restart"
     },
